Fixed the margin for the page carousel so it isn't touching the footer on mobile views

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -366,7 +366,7 @@ iframe {
   align-self: center;
   justify-self: center;
   gap: .75rem;
-  margin-top: 2rem;
+  margin: 2rem 0;
   font-size: 20px;
 }
 
